updates to fixed footer z-index problems and minor css changes for fallback support

--- a/src/sass/1j22f.scss
+++ b/src/sass/1j22f.scss
@@ -1051,6 +1051,7 @@ body{
   width: 100%;
   overflow: visible;
   position: relative;
+  display: table-cell;
   display: flex;
 
   .project{
@@ -1134,7 +1135,7 @@ body{
   bottom: 0;
   width: 100%;
   height: 50px;
-  z-index: 1000;
+  z-index: 1;
   // background: rgba(2,2,2,0.6);
 
   .achievement-box, .error-box{
